Fix allowing double submission of comment on iOS, refactor out commentbox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,4 +23,11 @@
   .btn-primary {
     @apply text-white
   }
+  input:disabled {
+    /* Override iOS / Android font color change */
+    -webkit-text-fill-color:black;
+    /* Override iOS opacity change affecting text & background color */
+    /* setting this to 0.7 rather than 1 for UpdateableTextForecast, todo do something smarter */
+    -webkit-opacity:0.7;
+  }
 }
